Improve Luminescent Forest Biome